kubernetes/helloworld.yaml
# Manifest creato per testare 'Checkbox CD' (Automated deployment da GUI di GKE)
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: checkboxcd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - image: gcr.io/galloro-gke/github.com/ggalloro/helloworld
          imagePullPolicy: IfNotPresent
          name: helloworld-sha256-1
---
apiVersion: v1
kind: Service
metadata:
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: helloworld
  name: helloworld-service
  namespace: checkboxcd
spec:
  clusterIP: 10.11.248.118
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 32056
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: helloworld
  sessionAffinity: None
  type: LoadBalancer
