kubernetes/helloingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "helloworld"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld
          servicePort: 80
      - path: /v2
        backend:
          serviceName: helloworld2
          servicePort: 80
